[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Menu_Buttons/SFX_on_button_light.png" type="Texture" id=1]
[ext_resource path="res://UI/Menu_Buttons/SFX_off_button.png" type="Texture" id=2]
[ext_resource path="res://UI/Menu_Buttons/Toggle_Button.gd" type="Script" id=3]
[ext_resource path="res://UI/Menu_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Shaders/Squish.tres" type="Material" id=5]
[ext_resource path="res://UI/Menu_Buttons/Sparkle.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Menu_Buttons/SFX_button.png" type="Texture" id=7]
[ext_resource path="res://UI/Menu_Buttons/SFX_off_button_light.png" type="Texture" id=8]

[sub_resource type="Animation" id=10]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 0.00112177 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 0.0 ]
}

[node name="Toggle_Button" type="TextureButton"]
material = ExtResource( 5 )
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 40, 40 )
hint_tooltip = "Play"
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
on_hover_texture = ExtResource( 1 )
off_hover_texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hover = SubResource( 10 )

[node name="Sparkle" parent="." instance=ExtResource( 6 )]
frame = 5

[connection signal="mouse_entered" from="." to="." method="_on_Toggle_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Toggle_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Toggle_Button_pressed"]
